Fixed a bug that loading tours from JavaScript for several times breaks the custom UI. Tweaked the button for toggling the annotator.

--- a/css/defaultUI.css
+++ b/css/defaultUI.css
@@ -128,7 +128,7 @@ body, html {
 
 .annotatorToggle .ui-button-text {
   margin-top: -1px;
-  margin-left: -2px;
+  margin-left: -3px;
 }
 
 .editorToggle {
